# commonlitreadabilityprize

./: .gitignore  README.md  hyperparams.yml  infer.py  predict.py  pyproject.toml  requirements-modern.txt  train.py
scripts/: build_offline_bundle.sh  install_offline.sh
src/: config.py  models.py  pretraining.py  utils.py
